# poker-bot-arena

./: .dockerignore  .gitignore  Dockerfile  README.md  STUDENT_HANDOUT.md  TECHNICAL_SPEC.md  TEST_COVERAGE.md  diagram.md  fly.practice.toml  fly.toml  fly.tournament.toml  pyproject.toml  sample_bot.py
DOCS/: architecture.md  bot_checklist.md  quickstart.md
PokerArenaDisplay/PokerArenaDisplay/: ContentView.swift  PokerTableModels.swift  PokerTableView.swift  TableViewModel.swift
PokerArenaDisplay/PokerArenaDisplay.xcodeproj/: project.pbxproj
core/: __init__.py  evaluator.py  game.py  models.py
host/: __init__.py  __main__.py  cards.py  game.py  models.py  server.py
poker_bot_arena.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
practice/: README.md  __init__.py  bots.py  server.py
scripts/: bot_stress.py  manual_client.py  tourney_sim.py
spectator/: README.md
spectator-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
spectator-ui/src/: App.js  App.tsx  styles.css  types.d.ts  types.ts
spectator-ui/src/components/: Card.d.ts  Card.js  Card.tsx  ControlPanel.d.ts  ControlPanel.js  (+13 more)
spectator/PokerArenaDisplay/: GameHostClient.swift  PokerArenaDisplayApp.swift
spectator/PokerArenaDisplay.xcodeproj/: project.pbxproj
tests/: helpers.py  test_complex_betting.py  test_error_handling.py  test_evaluator.py  test_game_engine.py  test_integration.py  test_state_management.py  test_stress.py
tournament/: README.md  __init__.py  __main__.py  server.py
(+11 files in other folders)
