[project]
name = "poker-bot-arena"
version = "0.1.0"
description = "Poker Bot Arena host server, engine, and tooling"
requires-python = ">=3.9"
dependencies = [
  "websockets==12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.4.2"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
