[project]
name = "poker-bot-arena"
version = "0.1.0"
description = "Poker Bot Arena host server, engine, and tooling"
requires-python = ">=3.9"
dependencies = [
  "websockets==12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.4.2"]

[project.scripts]
tournament-host = "tournament.__main__:main"
practice-server = "practice.server:main"
sample-bot = "sample_bot:main"
tourney-sim = "scripts.tourney_sim:main"

[tool.setuptools]
packages = ["core", "tournament", "practice", "scripts"]
py-modules = ["sample_bot"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
